--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <!-- pdf -->
-      <a class="icon-link" href="./static/videos/xxx.pdf">
+      <a class="icon-link" href="static/files/MM2024_PGAHum_arxiv.pdf">
         <i class="fas fa-file-pdf"></i>
       </a>
       <!-- email -->
